<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zcashBlack_87"
    android:padding="30dp"
    tools:context=".activities.AuthenticationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_img"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/zcashBlack_87"
            android:contentDescription="@string/Camera"
            android:orientation="vertical"
            android:padding="4dp"
            android:src="@drawable/camera_reg"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="@+id/cardView3"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="150dp"
            app:layout_constraintBottom_toTopOf="@+id/username_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar_imageview_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/zcashGray"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/person"
                android:tag="@string/Camera" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:background="@drawable/bg_txtl"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/zcashGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_txtl"
            android:drawableStart="@drawable/baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:ems="10"
            android:hint="@string/email_gmail_com"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textSize="16sp"
            android:paddingTop="15dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/zcashGray"
            app:layout_constraintEnd_toEndOf="@+id/username_sign_up"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/username_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/username_sign_up" />

        <EditText
            android:id="@+id/password_signs_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_txtl"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="8dp"
            android:drawableTint="@color/blue"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textColorHint="@color/zcashGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Email_txt"
            app:layout_constraintTop_toBottomOf="@+id/Email_txt" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_btn"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold|normal"
            app:layout_constraintEnd_toEndOf="@+id/password_signs_up"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_signs_up"
            app:layout_constraintTop_toBottomOf="@+id/password_signs_up" />

        <TextView
            android:id="@+id/already_got_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingBottom="5dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn"
            tools:ignore="TextSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>